{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 162,
  "lineage": "bcebd4d5-babf-8083-5ef4-9c78127aca21",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0928049abf5fe7ffb",
            "association_id": "eipassoc-011ad0b498b7c8d27",
            "domain": "vpc",
            "id": "eipalloc-0928049abf5fe7ffb",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0fc8310f1bcd83aee",
            "private_dns": "ip-10-1-0-49.ap-southeast-1.compute.internal",
            "private_ip": "10.1.0.49",
            "public_dns": "ec2-18-142-130-74.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.142.130.74",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "stage-eip",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "stage-eip",
              "terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "apache88",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b89f7b3f054b957e",
            "arn": "arn:aws:ec2:ap-southeast-1:234949410202:instance/i-0d93850efa8834d62",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d93850efa8834d62",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0faf448576f5318b0",
            "private_dns": "ip-10-1-3-71.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.3.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02040c04799140bf3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03b28b6ff4c7f42a4",
            "tags": {
              "name": "stage-apache",
              "terraform": "true"
            },
            "tags_all": {
              "name": "stage-apache",
              "terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cd0a14ceb4546618"
            ]
          },
          "dependencies": [
            "aws_security_group.apache",
            "aws_security_group.bastion88",
            "aws_security_group.loadbalancer",
            "aws_subnet.private",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b89f7b3f054b957e",
            "arn": "arn:aws:ec2:ap-southeast-1:234949410202:instance/i-0b871a0267f37c0e9",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b871a0267f37c0e9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ba5fa17d6fb60dfc",
            "private_dns": "ip-10-1-0-157.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.157",
            "public_dns": "ec2-13-250-122-60.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.250.122.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-095f478f1bd75f8cb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d8d4d6b83c73a918",
            "tags": {
              "name": "stage-bastion",
              "terraform": "true"
            },
            "tags_all": {
              "name": "stage-bastion",
              "terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0836c58531d5a262a"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion88",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:234949410202:internet-gateway/igw-0dd232620de258c17",
            "id": "igw-0dd232620de258c17",
            "owner_id": "234949410202",
            "tags": {
              "Name": "stage-igw",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "stage-igw",
              "terraform": "true"
            },
            "vpc_id": "vpc-02889e64a0e7717d0"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0928049abf5fe7ffb",
            "connectivity_type": "public",
            "id": "nat-037cda3a86d701ab5",
            "network_interface_id": "eni-0fc8310f1bcd83aee",
            "private_ip": "10.1.0.49",
            "public_ip": "18.142.130.74",
            "subnet_id": "subnet-0d8d4d6b83c73a918",
            "tags": {
              "Name": "stage-natgw",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "stage-natgw",
              "terraform": "true"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:234949410202:route-table/rtb-0eed6e5ab86ef0bde",
            "id": "rtb-0eed6e5ab86ef0bde",
            "owner_id": "234949410202",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-037cda3a86d701ab5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "stage-route-Private",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "stage-route-Private",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-02889e64a0e7717d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgw",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:234949410202:route-table/rtb-03e5f931e7b0a353d",
            "id": "rtb-03e5f931e7b0a353d",
            "owner_id": "234949410202",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dd232620de258c17",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "stage-route-Public",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "stage-route-Public",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-02889e64a0e7717d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9a38cd6c27cb77c",
            "route_table_id": "rtb-0eed6e5ab86ef0bde",
            "subnet_id": "subnet-04e16bca03c4824cc"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.data",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe1a971cfd5ec615",
            "route_table_id": "rtb-0eed6e5ab86ef0bde",
            "subnet_id": "subnet-0cb0184cd195a6fc2"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.data",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e888faef0eb39978",
            "route_table_id": "rtb-0eed6e5ab86ef0bde",
            "subnet_id": "subnet-0daa868b417979dec"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.data",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052c3f70eda0822fc",
            "route_table_id": "rtb-0eed6e5ab86ef0bde",
            "subnet_id": "subnet-03b28b6ff4c7f42a4"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021b8bcb0ff4d0138",
            "route_table_id": "rtb-0eed6e5ab86ef0bde",
            "subnet_id": "subnet-0a758a7fae6ed6b8a"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcb6dfa3ea111f03",
            "route_table_id": "rtb-0eed6e5ab86ef0bde",
            "subnet_id": "subnet-0d28a16681bd5a9d3"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06516545d8df1b407",
            "route_table_id": "rtb-03e5f931e7b0a353d",
            "subnet_id": "subnet-0d8d4d6b83c73a918"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06705080e02b63283",
            "route_table_id": "rtb-03e5f931e7b0a353d",
            "subnet_id": "subnet-0e1291d850b915819"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06575926735a6924e",
            "route_table_id": "rtb-03e5f931e7b0a353d",
            "subnet_id": "subnet-03aec4d8d439e1402"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:234949410202:security-group/sg-0cd0a14ceb4546618",
            "description": "Allow end user ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd0a14ceb4546618",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "connecting  admin with ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0836c58531d5a262a"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "connecting end user",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0531c3d35f7ff53a1"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "apache.sg",
            "name_prefix": "",
            "owner_id": "234949410202",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stage-apache-sg",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "stage-apache-sg",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-02889e64a0e7717d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion88",
            "aws_security_group.loadbalancer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion88",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:234949410202:security-group/sg-0836c58531d5a262a",
            "description": "Allow admion with ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0836c58531d5a262a",
            "ingress": [
              {
                "cidr_blocks": [
                  "103.110.170.84/32"
                ],
                "description": "connecting admin with ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion88.sg",
            "name_prefix": "",
            "owner_id": "234949410202",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stage-bastion-sg",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "stage-bastion-sg",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-02889e64a0e7717d0"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:234949410202:security-group/sg-0531c3d35f7ff53a1",
            "description": "Allow end user ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0531c3d35f7ff53a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "connecting ssh with end user",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "loadbalancer.sg",
            "name_prefix": "",
            "owner_id": "234949410202",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stage-loadbalancer-sg",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "stage-loadbalancer-sg",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-02889e64a0e7717d0"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:234949410202:subnet/subnet-04e16bca03c4824cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.1.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e16bca03c4824cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "234949410202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Stage-Data-subnet-1",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "Stage-Data-subnet-1",
              "terraform": "true"
            },
            "vpc_id": "vpc-02889e64a0e7717d0"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:234949410202:subnet/subnet-0cb0184cd195a6fc2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.1.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb0184cd195a6fc2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "234949410202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Stage-Data-subnet-2",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "Stage-Data-subnet-2",
              "terraform": "true"
            },
            "vpc_id": "vpc-02889e64a0e7717d0"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:234949410202:subnet/subnet-0daa868b417979dec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.1.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0daa868b417979dec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "234949410202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Stage-Data-subnet-3",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "Stage-Data-subnet-3",
              "terraform": "true"
            },
            "vpc_id": "vpc-02889e64a0e7717d0"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:234949410202:subnet/subnet-03b28b6ff4c7f42a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b28b6ff4c7f42a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "234949410202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Stage-Private-subnet-1",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "Stage-Private-subnet-1",
              "terraform": "true"
            },
            "vpc_id": "vpc-02889e64a0e7717d0"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:234949410202:subnet/subnet-0a758a7fae6ed6b8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a758a7fae6ed6b8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "234949410202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Stage-Private-subnet-2",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "Stage-Private-subnet-2",
              "terraform": "true"
            },
            "vpc_id": "vpc-02889e64a0e7717d0"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:234949410202:subnet/subnet-0d28a16681bd5a9d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d28a16681bd5a9d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "234949410202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Stage-Private-subnet-3",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "Stage-Private-subnet-3",
              "terraform": "true"
            },
            "vpc_id": "vpc-02889e64a0e7717d0"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:234949410202:subnet/subnet-0d8d4d6b83c73a918",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8d4d6b83c73a918",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "234949410202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Stage-Pub-subnet-1",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "Stage-Pub-subnet-1",
              "terraform": "true"
            },
            "vpc_id": "vpc-02889e64a0e7717d0"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:234949410202:subnet/subnet-0e1291d850b915819",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1291d850b915819",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "234949410202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Stage-Pub-subnet-2",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "Stage-Pub-subnet-2",
              "terraform": "true"
            },
            "vpc_id": "vpc-02889e64a0e7717d0"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:234949410202:subnet/subnet-03aec4d8d439e1402",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03aec4d8d439e1402",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "234949410202",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Stage-Pub-subnet-3",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "Stage-Pub-subnet-3",
              "terraform": "true"
            },
            "vpc_id": "vpc-02889e64a0e7717d0"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:234949410202:vpc/vpc-02889e64a0e7717d0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/17",
            "default_network_acl_id": "acl-062b74b92635d1cd5",
            "default_route_table_id": "rtb-00b5d906f949f4b62",
            "default_security_group_id": "sg-003deef45ff743bd6",
            "dhcp_options_id": "dopt-0118b322db6217a8e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02889e64a0e7717d0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00b5d906f949f4b62",
            "owner_id": "234949410202",
            "tags": {
              "Name": "stage-vpc",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "stage-vpc",
              "terraform": "true"
            }
          }
        }
      ]
    }
  ]
}